fix: update body overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 body {
+  overflow-x: hidden;
   display: flex-start;
   flex-direction: column;
   align-items: center;
